# codex-feishu-bot

./: .gitignore  README.md  README.zh-CN.md  app.py  config.py  pyproject.toml  requirements.txt
bridge_appserver/: __init__.py  approval_router.py  client.py  events.py  turn_router.py  ws_bridge.py
codex_bridge/: codex_controller.py  models.py  session_parser.py  session_registry.py  state_store.py  watcher.py
docs/: INSTALL.md  INSTALL.zh-CN.md
feishu_bot/: cards.py  service.py
