[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-feishu-bot"
version = "0.1.0"
description = "A Feishu/Lark bridge for Codex CLI and Codex App Server workflows"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "codex-feishu-bot contributors" }]
license = { text = "Apache-2.0" }
dependencies = [
  "lark-oapi>=1.4.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
codex-feishu-bot = "app:main"

[tool.setuptools]
py-modules = ["app", "config"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bridge_appserver*", "codex_bridge*"]
exclude = ["docs*", "runtime*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
